--- a/contato.html
+++ b/contato.html
@@ -14,8 +14,8 @@
 			rel="stylesheet"
 		/>
 		<!-- Styles  -->
-		<link rel="stylesheet" href="/styles/base.css" />
-		<link rel="stylesheet" href="/styles/calculator.css" />
+		<link rel="stylesheet" href="/base.css" />
+		<link rel="stylesheet" href="/calculator.css" />
 	</head>
 	<body>
 		<header>
@@ -23,7 +23,7 @@
 				<div class="navbar-container">
 					<a class="navbar-item" href="/index.html">
 						<img
-							src="/images/Circle-icons-calculator.svg"
+							src="/Circle-icons-calculator.svg"
 							alt=""
 							width="30"
 							height="24"
