--- a/thanks.html
+++ b/thanks.html
@@ -14,11 +14,11 @@
 			rel="stylesheet"
 		/>
 		<!-- Styles  -->
-		<link rel="stylesheet" href="/styles/base.css" />
-		<link rel="stylesheet" href="/styles/calculator.css" />
-		<link rel="stylesheet" href="/styles/contato.css" />
-		<script src="/scripts/calculator.js" defer></script>
-		<script src="/scripts/accordion.js" defer></script>
+		<link rel="stylesheet" href="/base.css" />
+		<link rel="stylesheet" href="/calculator.css" />
+		<link rel="stylesheet" href="/contato.css" />
+		<script src="/calculator.js" defer></script>
+		<script src="/accordion.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -26,7 +26,7 @@
 				<div class="navbar-container">
 					<a class="navbar-item" href="/index.html">
 						<img
-							src="/images/Circle-icons-calculator.svg"
+							src="/Circle-icons-calculator.svg"
 							alt=""
 							width="30"
 							height="24"
