responsive for mobile

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 						<div class="resultados-value moneyInput green" id="lucro-tributável">R$ 0,00</div>
 					</div>
 
-					<div class="items flex-column contador">
+					<div class="items contador">
 						<h4>
 							Declaração Anual do IRPF &nbsp
 							<span class="green" id="result-title">Não Obrigatória</span>
@@ -243,14 +243,14 @@
 				</section>
 
 				<!-- Recomendação de Contador - Entrar em contato -->
-				<section class="container contador">
+				<!-- <section class="container contador">
 					<h2>Se interessou mais?</h2>
 
 					<div class="items contador">
 						<h4>Fulano de tal</h4>
 						<p>É bom!</p>
 					</div>
-				</section>
+				</section> -->
 			</div>
 		</main>
 
