--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="bundle.js" defer></script>
 		<!-- Styles  -->
 		<link rel="stylesheet" href="/styles/base.css" />
 		<link rel="stylesheet" href="/styles/calculator.css" />
@@ -281,7 +282,6 @@
 							Os cálculos são oferecidos à título indicativo e não caracterizam conselho fiscal
 							oferecido por um contador agregado.
 						</p>
-						<p>Seus dados não são armazenados em nossos bancos de dados.</p>
 					</div>
 				</section>
 				<!-- Recomendação de Contador - Entrar em contato -->
