--- a/public/privacidade.html
+++ b/public/privacidade.html
@@ -16,6 +16,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="bundle.js" defer></script>
 		<!-- Styles  -->
 		<link rel="stylesheet" href="/styles/base.css" />
 		<link rel="stylesheet" href="/styles/calculator.css" />
