Live server branch

--- a/public/contato.html
+++ b/public/contato.html
@@ -18,17 +18,17 @@
 		/>
 		<script src="bundle.js" defer></script>
 		<!-- Styles  -->
-		<link rel="stylesheet" href="/styles/base.css" />
-		<link rel="stylesheet" href="/styles/calculator.css" />
-		<link rel="shortcut icon" href="/images/favicon.ico" />
+		<link rel="stylesheet" href="styles/base.css" />
+		<link rel="stylesheet" href="styles/calculator.css" />
+		<link rel="shortcut icon" href="images/favicon.ico" />
 	</head>
 	<body>
 		<header>
 			<nav class="navbar">
 				<div class="navbar-container">
-					<a class="navbar-item" href="/index.html">
+					<a class="navbar-item" href="index.html">
 						<img
-							src="/images/Circle-icons-calculator.svg"
+							src="images/Circle-icons-calculator.svg"
 							alt=""
 							width="30"
 							height="24"
@@ -98,9 +98,9 @@
 		<footer>
 			<div>
 				<nav>
-					<a href="/contato.html">Contato</a> |
-					<a href="/privacidade.html">Política de Privacidade</a> |
-					<a href="/termos-de-uso.html">Termos de Uso</a>
+					<a href="contato.html">Contato</a> |
+					<a href="privacidade.html">Política de Privacidade</a> |
+					<a href="termos-de-uso.html">Termos de Uso</a>
 				</nav>
 				<p>© Copyright 2022 - calcMEI</p>
 			</div>
