--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,20 @@
 		/>
 		<script src="bundle.js" defer></script>
 		<!-- Styles  -->
-		<link rel="stylesheet" href="/styles/base.css" />
-		<link rel="stylesheet" href="/styles/calculator.css" />
+		<link rel="stylesheet" href="styles/base.css" />
+		<link rel="stylesheet" href="styles/calculator.css" />
 
-		<script src="/scripts/calculator.js" defer></script>
-		<script src="/scripts/accordion.js" defer></script>
-		<link rel="shortcut icon" href="/images/favicon.ico" />
+		<script src="scripts/calculator.js" defer></script>
+		<script src="scripts/accordion.js" defer></script>
+		<link rel="shortcut icon" href="images/favicon.ico" />
 	</head>
 	<body>
 		<header>
 			<nav class="navbar">
 				<div class="navbar-container">
-					<a class="navbar-item" href="/index.html">
+					<a class="navbar-item" href="index.html">
 						<img
-							src="/images/Circle-icons-calculator.svg"
+							src="images/Circle-icons-calculator.svg"
 							alt=""
 							width="30"
 							height="24"
@@ -270,9 +270,8 @@
 					<div>
 						<p>
 							Ao acessar o site <a href="https://calcmei.com.br">calcMEI</a> você concorda em
-							cumprir com os
-							<a href="https://calcmei.com.br/termos-de-uso.html">Termos de Uso </a> e aceita nossa
-							<a href="https://calcmei.com.br/privacidade.html">Política de Privacidade.</a>
+							cumprir com os <a href="termos-de-uso.html">Termos de Uso </a> e aceita nossa
+							<a href="privacidade.html">Política de Privacidade.</a>
 						</p>
 						<p>
 							O calcMEI.com.br não se responsabiliza pelo uso ou pelas ações tomadas com base no
@@ -299,9 +298,9 @@
 		<footer>
 			<div>
 				<nav>
-					<a href="/contato.html">Contato</a> |
-					<a href="/privacidade.html">Política de Privacidade</a> |
-					<a href="/termos-de-uso.html">Termos de Uso</a>
+					<a href="contato.html">Contato</a> |
+					<a href="privacidade.html">Política de Privacidade</a> |
+					<a href="termos-de-uso.html">Termos de Uso</a>
 				</nav>
 				<p>© Copyright 2022 - calcMEI</p>
 			</div>
