feat: add adsense tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 			name="description"
 			content="É MEI e não sabe se precisa declarar o Imposto de Renda Pessoa Física? Acesse agora e fique tranquilo com sua Contabilidade. Calculadora IRPF - MEI. Microempreendedor Individual."
 		/>
+		<meta name="google-adsense-account" content="ca-pub-9442959543814157">
 		<title>Calculadora IRPF - MEI</title>
 		<!-- Fonts  -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
