--- a/public/termos-de-uso.html
+++ b/public/termos-de-uso.html
@@ -174,5 +174,7 @@
 				<p>© Copyright 2022 - calcMEI</p>
 			</div>
 		</footer>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9442959543814157"
+     crossorigin="anonymous"></script>
 	</body>
 </html>
