feat: update count rules

--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
 		<main>
 			<div class="border">
 				<h1>Calculadora Declaração IRPF - MEI</h1>
-				<p>Ano-Calendário de 2021 - Exercício de 2022</p>
+				<p>Ano-Calendário de 2024 - Exercício de 2025</p>
 				<h6>
-					Última atualização em 25/08/2022 |
+					Última atualização em 23/02/2025 |
 					<a
 						target="_blank"
-						href="http://normas.receita.fazenda.gov.br/sijut2consulta/link.action?idAto=123084#:~:text=DISPOSI%C3%87%C3%83O%20PRELIMINAR-,Art.,pessoa%20f%C3%ADsica%20residente%20no%20Brasil."
-						>IN RFB n.2065</a
+						href="http://normas.receita.fazenda.gov.br/sijut2consulta/link.action?naoPublicado=&idAto=136488&visao=compilado"
+						>IN RFB Nº 2178</a
 					>
 				</h6>
 
@@ -151,7 +151,7 @@
 							</div>
 						</div>
 						<p class="accordion-content">
-							É a soma de todos os valores recebidos ao longo do ano de 2021.<br /><br />
+							É a soma de todos os valores recebidos ao longo do ano de 2024.<br /><br />
 						</p>
 						<div class="resultados-value moneyInput" id="receita-bruta-apurado">R$ 0,00</div>
 					</div>
@@ -210,7 +210,7 @@
 							O Rendimento Tributável é o valor considerado para saber se você deve ou não pagar o
 							imposto de renda pessoa física. Para chegar nessa conta deve se fazer o Lucro Apurado
 							menos o Rendimento Isento. <br /><br />
-							Se o valor ficar acima de R$ 28.559,70, você é obrigado a declarar o IRPF.<br /><br />
+							Se o valor ficar acima de R$ 30.639,90, você é obrigado a declarar o IRPF.<br /><br />
 						</p>
 						<div class="resultados-value moneyInput green" id="lucro-tributável">R$ 0,00</div>
 					</div>
@@ -225,7 +225,7 @@
 						<p id="result-text">
 							<br />
 							Se você recebeu outros valores como Pessoa Física e a soma desses valores com o
-							Rendimento Tributável ficou maior que R$ 28.559,70, será necessário realizar o IRPF.
+							Rendimento Tributável ficou maior que R$ 30.639,90, será necessário realizar o IRPF.
 							Acompanhe abaixo mais informações.
 						</p>
 					</div>
@@ -246,20 +246,20 @@
 
 				<!-- Radio Checkbox  -->
 				<section class="container checkbox">
-					<h2>Você se enquadra em alguma dessas opções como Pessoa Física em 2021?</h2>
+					<h2>Você se enquadra em alguma dessas opções como Pessoa Física em 2024?</h2>
 					<div class="items">
 						<div class="list">
-							<h4>- Recebeu rendimentos isentos acima de R$ 40.000,00?</h4>
+							<h4>- Recebeu rendimentos isentos acima de R$ 200.000,00?</h4>
 							<h4>- Realiza operações na bolsa de valores?</h4>
-							<h4>- Obteve receita bruta superior a R$ 142.798,50 em atividade rural?</h4>
-							<h4>- Possui bens no valor acima de R$ 300.000,00?</h4>
+							<h4>- Obteve receita bruta superior a R$ 153.199,50 em atividade rural?</h4>
+							<h4>- Possui bens no valor acima de R$ 800.000,00?</h4>
 							<h4>- Vendeu imóveis com isenção de IR?</h4>
 						</div>
 
 						<div class="custom-radio">
 							<p>
 								Caso sua resposta seja sim, você é obrigado a realizar a declaração do IRPF mesmo se
-								o rendimento tributável ficou abaixo de R$ 28.559,70.
+								o rendimento tributável ficou abaixo de R$ 30.639,90.
 							</p>
 						</div>
 					</div>
